# E-Commerce_FWS

./: .gitignore  README.md  graph_test.py  main.py  pyproject.toml  requirements.txt  utils
chroma_db/: chroma.sqlite3
data/: policy_remboursement.txt  politique_remboursement.txt  test_dataset.csv
src/: __init__.py  evaluation.py  graph.py  llm.py  prompts.py  schemas.py  state.py  utils.py
src/agents/: __init__.py  classifier.py  human_validator.py  nodes.py  resolver.py  responder.py  verifier_rag.py
src/evaluation/: prompt_tester.py  test_dataset.csv
src/graph/: state.py  workflow.py
src/rag/: __init__.py  ingest.py
src/tools/: rag_tool.py
src/ui/: app.py
